<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>net.es.nsi</groupId>
    <artifactId>nsi-nmwg-translator-client</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <pluginRepositories>
        <pluginRepository>
            <id>onejar-maven-plugin.googlecode.com</id>
            <url>http://onejar-maven-plugin.googlecode.com/svn/mavenrepo</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <!-- Jersey for JAX-RS and HTTP container runtime. -->
        <dependency>
            <groupId>org.glassfish.jersey.containers</groupId>
            <artifactId>jersey-container-grizzly2-servlet</artifactId>
            <version>2.17</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.media</groupId>
            <artifactId>jersey-media-moxy</artifactId>
            <version>2.17</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.test-framework.providers</groupId>
            <artifactId>jersey-test-framework-provider-bundle</artifactId>
            <version>2.17</version>
            <type>pom</type>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.ext</groupId>
            <artifactId>jersey-proxy-client</artifactId>
            <version>2.17</version>
        </dependency>

        <dependency>
            <groupId>org.glassfish.jersey.connectors</groupId>
            <artifactId>jersey-apache-connector</artifactId>
            <version>2.17</version>
        </dependency>

        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.4.1</version>
        </dependency>

        <!-- SLF and Log4j for logging infrestructure. -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.9</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.7.9</version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>jul-to-slf4j</artifactId>
            <version>1.7.9</version>
        </dependency>

        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.17</version>
        </dependency>

        <!-- Google JSON parsers for reading configuration data from files. -->
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.3.1</version>
        </dependency>

        <!-- For FileUtils -->
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>1.3.2</version>
        </dependency>

        <!-- Quartz is dependent on this. -->
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2</version>
            <scope>runtime</scope>
        </dependency>

        <dependency>
            <groupId>commons-cli</groupId>
            <artifactId>commons-cli</artifactId>
            <version>1.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>18.0</version>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>1.9.5</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.hamcrest</groupId>
                    <artifactId>hamcrest-core</artifactId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-library</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.11</version>
            <scope>test</scope>
        </dependency>
     </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                    <compilerArgument>-Xlint:deprecation</compilerArgument>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>jaxb2-maven-plugin</artifactId>
                <version>1.6</version>
                <executions>
                  <execution>
                    <id>configuration</id>
                    <goals>
                        <goal>xjc</goal>
                    </goals>
                    <configuration>
                        <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
                        <bindingFiles>config.xjb</bindingFiles>
                        <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
                        <schemaFiles>configuration.xsd</schemaFiles>
                        <packageName>net.es.nsi.topology.translator.jaxb.configuration</packageName>
                    </configuration>
                  </execution>
                  <execution>
                    <id>nmwg</id>
                    <goals>
                        <goal>xjc</goal>
                    </goals>
                    <configuration>
                        <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
                        <bindingFiles>nmwg.xjb</bindingFiles>
                        <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
                        <schemaFiles>nmtopo-ctrlp.xsd</schemaFiles>
                        <packageName>net.es.nsi.topology.translator.jaxb.nmwg</packageName>
                        <clearOutputDir>false</clearOutputDir>
                    </configuration>
                  </execution>
                  <execution>
                    <id>dds</id>
                    <goals>
                        <goal>xjc</goal>
                    </goals>
                    <configuration>
                        <bindingDirectory>${basedir}/src/main/xsd</bindingDirectory>
                        <bindingFiles>dds.xjb</bindingFiles>
                        <schemaDirectory>${basedir}/src/main/xsd</schemaDirectory>
                        <schemaFiles>ogf_nsi_discovery_protocol_v1_0.xsd, nmlbase.xsd, ogf_nsi_services_definition_v2_0.xsd, ogf_nsi_discovery_nsa_v1_0.xsd, xCard.xsd</schemaFiles>
                        <packageName>net.es.nsi.topology.translator.jaxb.dds</packageName>
                        <clearOutputDir>false</clearOutputDir>
                    </configuration>
                  </execution>
                </executions>
            </plugin>

            <!-- puts all code & libraries in one jar -->
            <plugin>
                <groupId>org.dstovall</groupId>
                <artifactId>onejar-maven-plugin</artifactId>
                <version>1.4.4</version>
                <executions>
                    <execution>
                        <id>Translator</id>
                        <configuration>
                            <mainClass>net.es.nsi.topology.translator.Client</mainClass>
                            <classifier>onejar</classifier>
                            <filename>translator.jar</filename>
                        </configuration>
                        <goals>
                            <goal>one-jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.18.1</version>
                <configuration>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m -Djava.net.preferIPv4Stack=true</argLine>
                    <argLine>-Djersey.config.test.container.port=8400</argLine>
                    <argLine>-Dcom.sun.xml.bind.v2.runtime.JAXBContextImpl.fastBoot=true</argLine>
                    <argLine>-Djavax.net.ssl.trustStore=config/nsi-pce-truststore</argLine>
                    <argLine>-Djavax.net.ssl.trustStorePassword=changeit</argLine>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <version>2.6.1</version>
                <configuration>
                  <filesets>
                    <fileset>
                      <directory>${basedir}/var</directory>
                    </fileset>
                  </filesets>
                </configuration>
              </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>examples-source-zip</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-assembly-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
